potential fix for sidebar overlap on mobile

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ img {
 
 .sidebar-sm {
     width: 25%;
-    margin: 5px;
+    margin: 1em;
 }
 
 
